src/github.com/ebay/beam/query/parser/testdata/insert/errors/use_before_def.res
parser: variable ?var used but not (yet) captured